apps/webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtop
spec:
  selector:
    app: webtop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
