apps/webtop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop-ingress
  namespace: webtop
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: webtop.apps.rke2.koperwas.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webtop
                port:
                  number: 80
